# AntragZ

./: CMakeLists.txt  README.md  gen_ntt.py  verify_distribution.py
.cache/clangd/index/: cholesky.c.8AB9C2F724103F90.idx  common.h.261E556E55D5DA2C.idx  eigd.c.028BDEE66F2F14AF.idx  eigd.h.55FCA79C42C1953D.idx  endian.c.96AF23162B905175.idx  endian.h.BE4B61AF4A3AEAA7.idx  fft.c.B0B799B836E811FA.idx  fft.h.940D07F755111883.idx  keygen_basis.c.BE8983BBCD667106.idx  keygen_ntru.c.D61183BDEC337CC0.idx  main.c.A2CB816092212F66.idx  migd.c.1429D0595C30E01A.idx  migd.h.176226228545DD8F.idx  op_finite_field.c.2CE592C6790275F9.idx  op_hash.c.B6A2CBFA7A5CC97A.idx  op_ntt.c.D6CDF89E63FE3548.idx  op_trng.c.7CB9DC842829636D.idx  op_vector.c.2883372CB2F79BFD.idx  operator_interface.h.20C2FF910E1DDEC2.idx  operator_interface.h.ADC69CCE9F67C327.idx  prematrix.c.2175F39C53A6DF36.idx  prematrix.h.E7EEF5A59C8F08D1.idx  rng.c.063DACB581C1BBC4.idx  rng.h.F0B2641571B1006F.idx  sha256.c.2611947F4AAFA70E.idx  sha256.h.7F1CB4D551662DAA.idx  sha3.h.28CEB3A4083762C7.idx  sm3.c.A9F02FA4AB0B5720.idx  sm3.h.2DF7F5D54158EF9B.idx  test_prematrix.c.F72A5183E00F7816.idx
PQCDevKitAPI/: OP_shake256.h  op_finite_field.h  op_sha256.h  op_sm3.h  operator_interface.h
PQCDevKitAPI/hw/: op_hash_init.c
PQCDevKitAPI/soft/: op_finite_field.c  op_hash.c  op_ntt.c  op_trng.c  op_vector.c  operator_interface.h  sha3.h  sm3.c  sm3.h
include/: CDT_gen.py  cal_lw_params_131.py  calc_lw_params.py  cdt_zalcon_data.h  common.h
src/: cholesky.c  common.h  eigd.c  eigd.h  fft.c  fft.h  keygen.c  keygen_basis.c  keygen_ntru.c  migd.c  migd.h  prematrix.c  prematrix.h  rng.h  sign.c  verify.c
src/math/: cholesky.c  fft_clean.c  modp.h  ntt.c  ntt.h  poly.c  poly.h  poly_ntt.c  poly_ntt.h  poly_ntt_32.c  poly_ntt_32.h  zint.c  zint.h
src/math/kiss_fft/: kiss_fft.h
src/ntru/: keygen_ntru.c
src/prematrix/: prematrix.c  prematrix.h
src/sampler/: eigd.c  eigd.h  migd.c  migd.h  sample.c  sample.h  zalcon_samp.c  zalcon_samp.h
src/utils/: bench.h  encode.c  encode.h  file_utils.c  file_utils.h  hash.c  hash.h  rng.c  rng.h
test/: test_NTRUSolve.c  test_cholesky.c  test_eigd.c  test_fft_standalone.c  test_keygen.c  test_keygen_debug.c  test_migd.c  test_ntt_poly.c  test_ntt_poly_32.c  test_offline_samp.c  test_prematrix.c  test_prematrix_deep.c  test_samples.c  test_sign_impl.c  test_speed.c
